# Eng.Dados

ApacheIceberg/: Untitled.ipynb
DeltaLake/: Delta.ipynb  pyproject.toml
DeltaLake/RAW/: .part-00001-7966f504-9734-47a7-b172-08ceae393d92-c000.snappy.parquet.crc
DeltaLake/RAW/CLIENTES/: .part-00000-dbe5b571-303e-4b9b-b105-3081e6960ce5-c000.snappy.parquet.crc  .part-00001-f9eea571-d512-4d50-b773-5a7104e4a7f5-c000.snappy.parquet.crc  part-00000-989dc6e8-a3f0-4831-b2f8-9138248d861f-c000.snappy.parquet
DeltaLake/RAW/CLIENTES/_delta_log/: .00000000000000000000.json.crc  .00000000000000000001.json.crc  .00000000000000000004.json.crc  .00000000000000000005.json.crc  .00000000000000000006.json.crc  ._last_checkpoint.crc
RAW/CLIENTES/: .part-00000-0b84f076-53c7-477f-a530-ee8173047657-c000.snappy.parquet.crc  .part-00000-18aa7f3d-969c-4b12-8f2c-4d8ccdd9c26e-c000.snappy.parquet.crc  .part-00000-5d908eb8-3870-49af-a24d-c1c426068762-c000.snappy.parquet.crc  .part-00000-989dc6e8-a3f0-4831-b2f8-9138248d861f-c000.snappy.parquet.crc  part-00000-0b84f076-53c7-477f-a530-ee8173047657-c000.snappy.parquet  part-00000-18aa7f3d-969c-4b12-8f2c-4d8ccdd9c26e-c000.snappy.parquet  part-00000-5d908eb8-3870-49af-a24d-c1c426068762-c000.snappy.parquet  part-00000-dbe5b571-303e-4b9b-b105-3081e6960ce5-c000.snappy.parquet  part-00001-ef2c5934-37a6-41b6-912e-97a62177a600-c000.snappy.parquet  part-00001-f9eea571-d512-4d50-b773-5a7104e4a7f5-c000.snappy.parquet
RAW/CLIENTES/_delta_log/: .00000000000000000002.json.crc  .00000000000000000003.json.crc  .00000000000000000006.checkpoint.parquet.crc  (+1 more)
(+64 files in other folders)
